Duplicate metabolite abbrev appended w/ [1], [2]...
an edit and csv read