@@ -127,7 +127,6 @@ public class TextMetabolitesModelReader {
 			metabTableModel.addColumn(LocalConfig.getInstance().getMetabolitesMetaColumnNames().get(n));
 		}
 		LocalConfig.getInstance().getMetaboliteUsedMap().clear();
-		LocalConfig.getInstance().getDuplicateIds().clear();
 		LocalConfig.getInstance().getSuspiciousMetabolites().clear();
 		LocalConfig.getInstance().getMetaboliteNameIdMap().clear();
 
@@ -139,7 +138,6 @@ public class TextMetabolitesModelReader {
 		
 		Map<String, Object> metaboliteNameIdMap = new HashMap<String, Object>();
 		ArrayList<Integer> blankMetabIds = new ArrayList<Integer>();
-		ArrayList<Integer> duplicateIds = new ArrayList<Integer>();
 		
 		try {
 			reader = new CSVReader(new FileReader(file), ',');
@@ -173,16 +171,25 @@ public class TextMetabolitesModelReader {
 					String boundary = "";
 					
 	                String metaboliteAbbreviation = dataArray[LocalConfig.getInstance().getMetaboliteAbbreviationColumnIndex()];
-	                metabRow.add(metaboliteAbbreviation);
+	                
 					if (metaboliteAbbreviation == null || metaboliteAbbreviation.trim().length() == 0) {
 						blankMetabIds.add(id);		
 					} else {
 						if (metaboliteNameIdMap.containsKey(metaboliteAbbreviation)) {
-							duplicateIds.add(i - correction - 1);
-						} else {
-							metaboliteNameIdMap.put(metaboliteAbbreviation, new Integer(i - correction - 1));
+							// show prompt here?
+							String duplicateSuffix = GraphicalInterfaceConstants.DUPLICATE_SUFFIX;
+							if (LocalConfig.getInstance().getMetaboliteNameIdMap().containsKey(metaboliteAbbreviation + duplicateSuffix)) {
+								int duplicateCount = Integer.valueOf(duplicateSuffix.substring(1, duplicateSuffix.length() - 1));
+								while (LocalConfig.getInstance().getMetaboliteNameIdMap().containsKey(metaboliteAbbreviation + duplicateSuffix.replace("1", Integer.toString(duplicateCount + 1)))) {
+									duplicateCount += 1;
+								}
+								duplicateSuffix = duplicateSuffix.replace("1", Integer.toString(duplicateCount + 1));
+							}
+							metaboliteAbbreviation = metaboliteAbbreviation + duplicateSuffix;
 						}							
 					}
+					metaboliteNameIdMap.put(metaboliteAbbreviation, id);
+					metabRow.add(metaboliteAbbreviation);
 					
 					metabRow.add(dataArray[LocalConfig.getInstance().getMetaboliteNameColumnIndex()]);
 					metaboliteIdNameMap.put(new Integer(id), dataArray[LocalConfig.getInstance().getMetaboliteNameColumnIndex()]);
@@ -225,8 +232,7 @@ public class TextMetabolitesModelReader {
 		System.out.println(metaboliteNameIdMap);
 		LocalConfig.getInstance().setMetaboliteIdNameMap(metaboliteIdNameMap);
 		System.out.println("idn" + metaboliteIdNameMap);
-		LocalConfig.getInstance().setBlankMetabIds(blankMetabIds);				
-		LocalConfig.getInstance().setDuplicateIds(duplicateIds);	
+		LocalConfig.getInstance().setBlankMetabIds(blankMetabIds);					
 		LocalConfig.getInstance().hasMetabolitesFile = true;
 		setMetabolitesTableModel(metabTableModel);
 		//System.out.println("Done");		
